--- a/style.css
+++ b/style.css
@@ -10,6 +10,40 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 13px;
   border: none;
+  scroll-behavior: smooth;
+}
+
+#home {
+  text-decoration: none;
+}
+
+.top {
+  width: 35px;
+  height: 35px;
+  text-align: center;
+  background-color: rgba(10, 191, 222, 0.5);
+  position: fixed;
+  bottom: 39px;
+  right: 15px;
+  z-index: 100;
+}
+
+.top i {
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+  font-family: Font Awesome\ 5 Pro;
+  font-weight: 900;
+  font-size: 25px;
+  color: rgba(255, 255, 255, 0.7);
+  margin-top: 5px;
+}
+
+.top:hover {
+  background-color: rgba(10, 191, 222, 0.9);
 }
 
 .section-1 {
@@ -537,6 +571,10 @@ body {
     font-size: 16px;
   }
 
+  .top {
+    bottom: 48px;
+  }
+
   .section-1 {
     padding: 96px 0 64px 0;
   }
@@ -620,14 +658,16 @@ body {
     color: #0ac6e5;
   }
 
-  .sub-menus, .sub-menus_2 .sub-menu_2 {
+  .sub-menus,
+  .sub-menus_2 .sub-menu_2 {
     position: relative;
   }
 
-  .sub-menu, .sub-menu_2 {
+  .sub-menu,
+  .sub-menu_2 {
     display: none;
   }
-  
+
   .sub-menus:hover .sub-menu {
     width: 190px;
     display: flex;
@@ -652,8 +692,8 @@ body {
     background-color: #50c6c6;
     color: #ffffff;
   }
-  
-  .sub-menus:hover .sub-menu .sub-menus_2:hover ~ .sub-menu_2 {
+
+  .sub-menus_2:hover ~ .sub-menu_2 {
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -662,8 +702,8 @@ body {
     width: 190px;
     background-color: rgba(3, 177, 252, 0.4);
   }
-  
-  .sub-menus:hover .sub-menu .sub-menus_2:hover ~ .sub-menu_2 a {
+
+  .sub-menus_2:hover ~ .sub-menu_2 a {
     display: block;
     text-decoration: none;
     text-align: left;
@@ -673,8 +713,8 @@ body {
     width: 100%;
     border-bottom: 2px solid rgba(3, 177, 252, 0.4);
   }
-  
-  .sub-menus:hover .sub-menu .sub-menus_2:hover ~ .sub-menu_2:hover a:hover {
+
+  .sub-menus_2:hover ~ .sub-menu_2:hover a:hover {
     background-color: #50c6c6;
     color: #ffffff;
   }
